--- a/WebSample/App_Plugins/MemberManager/backoffice/dashboard/memberListView.html
+++ b/WebSample/App_Plugins/MemberManager/backoffice/dashboard/memberListView.html
@@ -87,7 +87,7 @@
                     </umb-button>
                 </umb-editor-sub-header-section>
 
-                <umb-editor-sub-header-section>
+                <umb-editor-sub-header-section ng-if="options.allowExport">
                     <umb-button type="button"
                                 button-style="link"
                                 label="Export"
