--- a/MemberListView/App_Plugins/MemberListView/dialogs/member/filter.html
+++ b/MemberListView/App_Plugins/MemberListView/dialogs/member/filter.html
@@ -55,7 +55,7 @@
                                 <select ng-model="vm.filterData.umbracoMemberLockedOut">
                                     <option ng-value="null"><localize key="memberManager_optionAll">- All -</localize>-</option>
                                     <option ng-value="1"><localize key="memberManager_optionLockedOutOnly">Locked Out Only</localize></option>
-                                    <option ng-value="0"><localize key="memberManager_optionActiveOnly">Active Only</localize></option>
+                                    <option ng-value="0"><localize key="memberManager_optionActiveOnly">Unlocked Only</localize></option>
                                 </select>
                             </umb-control-group>
                         </umb-pane>
